--- a/1_Creat_Individuals.ipynb
+++ b/1_Creat_Individuals.ipynb
@@ -6,30 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "#from graph_tool.all import graph_tool as gt\n",
-    "import pickle\n",
-    "from shapely.prepared import prep\n",
-    "from shapely.ops import snap, linemerge, nearest_points\n",
-    "from shapely.geometry import MultiLineString, LineString, Point, Polygon, GeometryCollection\n",
-    "# from concurrent.futures import ThreadPoolExecutor\n",
-    "from functools import partial\n",
-    "from itertools import chain\n",
-    "from glob import glob\n",
-    "import sys\n",
     "import timeit\n",
-    "import os\n",
-    "from io import StringIO\n",
-    "#from IPython.display import display, HTML, Image\n",
-    "#from simpledbf import Dbf5\n",
+    "import random\n",
+    "import pickle #save results\n",
+    "from itertools import chain\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import normalize\n",
-    "import random\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#import matplotlib as mpl\n",
-    "#import seaborn as sns"
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -440,14 +424,6 @@
     "        mask[iindex] = False\n",
     "        members.append(iindex)\n",
     "\n",
-    "    #if may have children 18+ then add them\n",
-    "#         if (hh_type <= 5) and (h1.age > 36) and (np.random.random() < 0.3):\n",
-    "#         #to have a child older than 18, h1 should be at least 37\n",
-    "#             pot = people[mask]\n",
-    "#             iindex = pot[pot.age.isin(range(18,h1.age-15))].index[0]\n",
-    "#             ch18 = people.ix[iindex] #child should be at least 19 years younger than h1\n",
-    "#             mask[iindex] = False\n",
-    "#             members.append(iindex)\n",
     "\n",
     "    \"\"\"A child includes a son or daughter by birth (biological child), a stepchild,\n",
     "    or an adopted child of the householder, regardless of the child’s age or marital status.\n",
@@ -801,9 +777,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
